[gd_scene load_steps=8 format=1]

[ext_resource path="res://SB84_main/SB84_main.gd" type="Script" id=1]
[ext_resource path="res://SB84_main/chintzy.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Rocks/rock_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://background/background_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/HUD_scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music/music_scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ship/ship_root.tscn" type="PackedScene" id=7]

[node name="SB84_root" type="Node"]

script/script = ExtResource( 1 )

[node name="label_info" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 62.0
margin/top = 1710.0
margin/right = 1011.0
margin/bottom = 1886.0
custom_fonts/font = ExtResource( 2 )
text = "info"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rock_root" parent="." instance=ExtResource( 3 )]

[node name="BG_root" parent="." instance=ExtResource( 4 )]

[node name="HUD_root" parent="." instance=ExtResource( 5 )]

[node name="music_root" parent="." instance=ExtResource( 6 )]

[node name="ship_root" parent="." instance=ExtResource( 7 )]


